--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -109,5 +109,7 @@
         <file>Issue_923_test7_3/output.json</file>
         <file>doll/input.json</file>
         <file>doll/output.json</file>
+        <file>Issue_937_case_1a/input.json</file>
+        <file>Issue_937_case_1a/output.json</file>
     </qresource>
 </RCC>
