Fix initial state for Pattern messages dock widget.
It should not float, better initially show it docked.

--HG--
branch : develop

--- a/src/app/valentina/mainwindow.ui
+++ b/src/app/valentina/mainwindow.ui
@@ -2015,7 +2015,7 @@
   </widget>
   <widget class="QDockWidget" name="dockWidgetMessages">
    <property name="floating">
-    <bool>true</bool>
+    <bool>false</bool>
    </property>
    <property name="windowTitle">
     <string>Pattern messages</string>
