--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -57,6 +57,7 @@
         <file>schema/pattern/v0.8.3.xsd</file>
         <file>schema/pattern/v0.8.4.xsd</file>
         <file>schema/pattern/v0.8.5.xsd</file>
+        <file>schema/pattern/v0.8.6.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
@@ -71,5 +72,6 @@
         <file>schema/individual_measurements/v0.4.0.xsd</file>
         <file>schema/individual_measurements/v0.5.0.xsd</file>
         <file>schema/label_template/v1.0.0.xsd</file>
+        <file>schema/watermark/v1.0.0.xsd</file>
     </qresource>
 </RCC>
