--- a/src/test/ValentinaTest/share/test_data.qrc
+++ b/src/test/ValentinaTest/share/test_data.qrc
@@ -113,5 +113,7 @@
         <file>Issue_937_case_1a/output.json</file>
         <file>Issue_604/input.json</file>
         <file>Issue_604/output.json</file>
+        <file>Issue_548_case1/input.json</file>
+        <file>Issue_548_case1/output.json</file>
     </qresource>
 </RCC>
