--- a/src/libs/ifc/schema.qrc
+++ b/src/libs/ifc/schema.qrc
@@ -58,6 +58,7 @@
         <file>schema/pattern/v0.8.4.xsd</file>
         <file>schema/pattern/v0.8.5.xsd</file>
         <file>schema/pattern/v0.8.6.xsd</file>
+        <file>schema/pattern/v0.8.7.xsd</file>
         <file>schema/standard_measurements/v0.3.0.xsd</file>
         <file>schema/standard_measurements/v0.4.0.xsd</file>
         <file>schema/standard_measurements/v0.4.1.xsd</file>
